[gd_scene load_steps=16 format=3 uid="uid://cqs0wwguahnsp"]

[ext_resource type="Script" path="res://scenes/Levels/level_3.gd" id="1_ihune"]
[ext_resource type="PackedScene" uid="uid://b4w1u18aercdb" path="res://scenes/player.tscn" id="2_g8cr8"]
[ext_resource type="PackedScene" uid="uid://cwpg2sneyq6rf" path="res://scenes/player2.tscn" id="3_6ie8d"]
[ext_resource type="TileSet" uid="uid://d3k1ar04o4po5" path="res://scenes/tileset.tres" id="4_cakf5"]
[ext_resource type="PackedScene" uid="uid://cmr01mlt3f52b" path="res://scenes/dog.tscn" id="5_0ha74"]
[ext_resource type="PackedScene" uid="uid://cgboi5v27efyg" path="res://scenes/next_level.tscn" id="6_i06xo"]
[ext_resource type="PackedScene" uid="uid://cvyifgfcn6h34" path="res://scenes/boss_bunny.tscn" id="7_4aj25"]
[ext_resource type="PackedScene" uid="uid://dicdpchxv8chk" path="res://scenes/platform.tscn" id="8_k184q"]
[ext_resource type="AudioStream" uid="uid://cyou7r22tj2ee" path="res://assets/music/DS3_vordt.mp3" id="9_fws0j"]
[ext_resource type="PackedScene" uid="uid://b5cs6ubf1g8ex" path="res://scenes/zwockel.tscn" id="10_s83ah"]
[ext_resource type="Texture2D" uid="uid://d0ftkeprcgg5y" path="res://assets/background/wald3.jpg" id="11_f1jax"]
[ext_resource type="PackedScene" uid="uid://274q48wo4um8" path="res://scenes/kill_zone.tscn" id="12_rsto6"]
[ext_resource type="PackedScene" uid="uid://da8cxn8q226je" path="res://scenes/dutch_ingredient.tscn" id="13_xg54h"]
[ext_resource type="PackedScene" uid="uid://dir78bid8yy53" path="res://scenes/music.tscn" id="14_g5757"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_32snm"]
a = Vector2(2205, -17)
b = Vector2(-1792, 0)

[node name="Level3" type="Node2D"]
position = Vector2(18, 132)
script = ExtResource("1_ihune")

[node name="Player" parent="." instance=ExtResource("2_g8cr8")]
unique_name_in_owner = true
position = Vector2(128, -36)

[node name="Player2" parent="." instance=ExtResource("3_6ie8d")]
unique_name_in_owner = true
position = Vector2(71, -36)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("4_cakf5")
format = 2
layer_0/tile_data = PackedInt32Array(262144, 196613, 3, 262145, 196613, 3, 262146, 196613, 3, 262147, 196613, 3, 262148, 196613, 3, 262149, 196613, 3, 262150, 196613, 3, 196609, 65541, 2, 196608, 65541, 1, 524293, 196613, 3, 524294, 196613, 3, 524295, 196613, 3, 524296, 196613, 3, 524297, 196613, 3, 524298, 196613, 3, 524299, 196613, 3, 524300, 196613, 3, 524301, 196613, 3, 917516, 196613, 3, 917517, 196613, 3, 917518, 196613, 3, 917519, 196613, 3, 917520, 196613, 3, 917521, 196613, 3, 917522, 196613, 3, 917523, 196613, 3, 917524, 196613, 3, 917525, 196613, 3, 917526, 262149, 3, 983063, 262149, 3, 1048600, 262149, 3, 1114137, 262149, 3, 1179674, 262149, 3, 1245211, 262149, 3, 1310748, 262149, 3, 1376285, 262149, 3, 1441822, 262149, 3, 1638430, 196613, 3, 1638431, 196613, 3, 1638432, 196613, 3, 1638433, 196613, 3, 1638434, 196613, 3, 1638435, 196613, 3, 1638437, 196613, 3, 1638438, 196613, 3, 1638439, 196613, 3, 1638440, 196613, 3, 1638441, 196613, 3, 1638442, 196613, 3, 1638443, 196613, 3, 1638444, 196613, 3, 1638445, 196613, 3, 1638446, 196613, 3, 1638447, 196613, 3, 1638448, 196613, 3, 1638449, 196613, 3, 1638450, 196613, 3, 1638451, 196613, 3, 1638452, 196613, 3, 1638453, 196613, 3, 1638454, 196613, 3, 1638455, 196613, 3, 1572920, 131077, 3, 1572893, 262149, 3, 1572903, 131072, 0, 1572916, 196608, 0, 851982, 0, 0, 851988, 196613, 2, 851983, 65541, 2, 851980, 65541, 1, 458763, 65541, 1, 458764, 196613, 2, 458757, 65541, 2, 458758, 65541, 2, 458759, 65541, 2, 786445, 393221, 0, 393222, 393221, 0, 1507372, 393221, 0, 458762, 9, 0, 1638436, 196613, 3, 1572900, 3, 0, 1572915, 3, 0, 1572907, 3, 0)

[node name="Dog" parent="." instance=ExtResource("5_0ha74")]
position = Vector2(172, -27)

[node name="NextLevel" parent="." instance=ExtResource("6_i06xo")]
position = Vector2(1521, -41)

[node name="Boss_Bunny" parent="." instance=ExtResource("7_4aj25")]
position = Vector2(1561, 774)

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_fws0j")

[node name="Zwockel" parent="." instance=ExtResource("10_s83ah")]
position = Vector2(581, 432)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(316, 156)
scale = Vector2(0.618206, 0.606318)
texture = ExtResource("11_f1jax")

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1117, 895)

[node name="Platform2" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1187, 851)

[node name="Platform3" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1333, 891)

[node name="Platform4" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1265, 851)

[node name="Platform5" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1757, 891)

[node name="Platform6" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1692, 864)

[node name="Platform7" parent="Platforms" instance=ExtResource("8_k184q")]
position = Vector2(1617, 889)

[node name="KillZone" parent="." instance=ExtResource("12_rsto6")]
position = Vector2(1384, 398)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(4, 546)
shape = SubResource("SegmentShape2D_32snm")

[node name="dutch_ingredient" parent="." instance=ExtResource("13_xg54h")]
position = Vector2(1689, 701)

[node name="Music" parent="." instance=ExtResource("14_g5757")]
max_distance = 50000.0
